# interviewquestions

./: README.md  pom.xml
cpp/: CMakeLists.txt  build.sh  concurrency_interview_questions.cpp  concurrency_interview_questions.h  unit_testing_interview_questions.cpp  unit_testing_interview_questions.h
cpp/tests/: CMakeLists.txt  unit_testing_interview_questions_test.cpp
java/: pom.xml
java/src/main/java/: ConcurrencyInterviewQuestions.java
java/src/main/java/models/: Update.java
java/src/test/java/: UnitTestingInterviewQuestionsTest.java
react/: tsconfig.json
react-question/: README.md  index.html  package-lock.json  package.json  vite.config.ts
react-question/public/: index.html
react-question/src/: App.tsx  index.css  index.tsx  product.ts  productList.tsx  productListItem.tsx
react-question/src/components/: ProductList.tsx  ProductListItem.tsx
react-question/src/helpers/: product.ts
react-question/tests/: ProductListItem.test.tsx
react/src/: App.tsx
src/main/java/: UnitTestingInterviewQuestions.java
src/main/java/models/: Animal.java  ItsFarTooHotException.java  Update.java  UpdateCallback.java
typescript/: package-lock.json  package.json  tsconfig.json
typescript/src/: index.ts
typescript/src/concurrencyInterviewQuestion/: concurrenyInterviewQuestions.ts  update.ts  updateProcessor.ts
typescript/src/unitTestingInterviewQuestion/: UnitTestingInterviewQuestions.ts
typescript/src/unitTestingInterviewQuestion/helpers/: TemperatureConstantGetter.ts
typescript/src/unitTestingInterviewQuestion/models/: Animal.ts  ItsFarTooHotError.ts
(+2 files in other folders)
